# RAG-Handson

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_runner.py
data/: attendance_policy.txt  college_handbook.txt  placement_guidelines.txt
src/: __init__.py  app.py  chunking.py  embeddings.py  generate.py  load_docs.py  retrieve.py  vector_store.py
templates/: test_ui.html
tests/: test_pipeline.py
