[project]
name = "rag-handson"
version = "0.1.0"
description = "RAG Workshop — Build a College Helpdesk from Scratch"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.uv]
compile-bytecode = true
